[package]
name = "abc195"
version = "0.1.0"
authors = ["nabeen <nabeen@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
abc195-a = { alias = "a", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_a" }
abc195-b = { alias = "b", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_b" }
abc195-c = { alias = "c", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_c" }
abc195-d = { alias = "d", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_d" }
abc195-e = { alias = "e", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_e" }
abc195-f = { alias = "f", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_f" }

[[bin]]
name = "abc195-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc195-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc195-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc195-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc195-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc195-f"
path = "src/bin/f.rs"
[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
